--- a/features/auth/src/main/res/navigation/nav_auth.xml
+++ b/features/auth/src/main/res/navigation/nav_auth.xml
@@ -2,12 +2,17 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/auth_nav_graph"
+    android:id="@+id/nav_auth"
     app:startDestination="@id/loginFragment">
 
     <fragment
         android:id="@+id/loginFragment"
-        android:name="com.danielwaiguru.auth.LoginFragment"
+        android:name="com.danielwaiguru.remoter.auth.LoginFragment"
         android:label="fragment_login"
-        tools:layout="@layout/fragment_login" />
+        tools:layout="@layout/fragment_login" >
+        <action
+            android:id="@+id/action_auth_to_onBoarding"
+            app:destination="@+id/onBoarding"
+            />
+    </fragment>
 </navigation>
