--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!--<style name="Theme.Remoter" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.Remoter" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryVariant">@color/colorPrimaryVariant</item>
         <item name="colorOnPrimary">@color/white</item>
@@ -8,7 +8,7 @@
         <item name="colorOnSecondary">@color/black</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
     </style>
-    <style name="Theme.Remoter.CustomButton" parent="TextAppearance.MaterialComponents.Button">
+    <!--<style name="Theme.Remoter.CustomButton" parent="TextAppearance.MaterialComponents.Button">
         <item name="textAllCaps">false</item>
         <item name="android:textSize">@dimen/_18ssp</item>
         <item name="android:paddingTop">@dimen/_6sdp</item>
