--- a/features/onboarding/src/main/res/layout/fragment_on_boarding.xml
+++ b/features/onboarding/src/main/res/layout/fragment_on_boarding.xml
@@ -4,21 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/seeker"
-    tools:context=".LoginFragment">
+    tools:context=".OnBoardingFragment">
 
-    <com.google.android.material.button.MaterialButton
-        style="@style/Theme.Remoter.CustomButton"
+    <androidx.viewpager2.widget.ViewPager2
         android:layout_width="match_parent"
-        android:id="@+id/getStarted"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:text="@string/get_started"
-        android:layout_marginStart="@dimen/_16sdp"
-        android:layout_marginEnd="@dimen/_16sdp"
-        android:layout_marginBottom="@dimen/_35sdp"
-        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
-
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
