--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,11 +8,11 @@
         <item name="colorOnSecondary">@color/black</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
     </style>
-    <!--<style name="Theme.Remoter.CustomButton" parent="TextAppearance.MaterialComponents.Button">
+    <style name="Theme.Remoter.CustomButton" parent="TextAppearance.MaterialComponents.Button">
         <item name="textAllCaps">false</item>
         <item name="android:textSize">@dimen/_18ssp</item>
         <item name="android:paddingTop">@dimen/_6sdp</item>
         <item name="android:paddingBottom">@dimen/_6sdp</item>
         <item name="android:textColor">@color/white</item>
-    </style>-->
+    </style>
 </resources>
