--- a/features/auth/src/main/res/layout/fragment_login.xml
+++ b/features/auth/src/main/res/layout/fragment_login.xml
@@ -11,12 +11,17 @@
         style="@style/Theme.Remoter.CustomButton"
         android:layout_width="match_parent"
         android:id="@+id/getStarted"
+        app:layout_constraintVertical_bias="0.90"
         app:layout_constraintBottom_toBottomOf="parent"
         android:text="@string/get_started"
+        android:visibility="gone"
+        tools:visibility="visible"
+        app:cornerRadius="@dimen/_30sdp"
         android:layout_marginStart="@dimen/_16sdp"
         android:layout_marginEnd="@dimen/_16sdp"
-        android:layout_marginBottom="@dimen/_35sdp"
-        android:layout_height="wrap_content"
+
+        android:layout_height="@dimen/_50sdp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
