--- a/features/onboarding/src/main/res/navigation/on_boarding_graph.xml
+++ b/features/onboarding/src/main/res/navigation/on_boarding_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/onBoardingFragment"
-        android:name="com.danielwaiguru.onboarding.OnBoardingFragment"
+        android:name="com.danielwaiguru.remoter.onboarding.OnBoardingFragment"
         android:label="fragment_on_boarding"
         tools:layout="@layout/fragment_on_boarding" />
 </navigation>
