--- a/shared/src/main/res/values-night/themes.xml
+++ b/shared/src/main/res/values-night/themes.xml
@@ -1,17 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
     <style name="Theme.Remoter" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_200</item>
         <item name="colorPrimaryVariant">@color/colorPrimaryVariant</item>
         <item name="colorOnPrimary">@color/black</item>
-        <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/colorSecondary</item>
         <item name="colorSecondaryVariant">@color/colorSecondary</item>
         <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
     </style>
     <style name="Theme.Remoter.CustomButton" parent="TextAppearance.MaterialComponents.Button">
         <item name="textAllCaps">false</item>
@@ -19,5 +14,6 @@
         <item name="android:paddingTop">@dimen/_6sdp</item>
         <item name="android:paddingBottom">@dimen/_6sdp</item>
         <item name="android:textColor">@color/white</item>
+        <item name="cornerRadius">@dimen/_30sdp</item>
     </style>
 </resources>
