Implement Dashboard ui design

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -10,5 +10,7 @@
         app:graphResName="on_boarding_graph"
         app:moduleName="onboarding"
 
-        />
+        >
+    </include-dynamic>
+    <include app:graph="@navigation/nav_dashboard" />
 </navigation>
