--- a/shared/src/main/res/values/colors.xml
+++ b/shared/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="secondaryVariant">#34A853</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="background_color">#EDF7FF</color>
 </resources>
