--- a/features/dashboard/src/main/res/navigation/nav_dashboard.xml
+++ b/features/dashboard/src/main/res/navigation/nav_dashboard.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/dashBoardFragment"
-        android:name="com.danielwaiguru.remoter.dashboard.DashBoardFragment"
+        android:name="com.danielwaiguru.remoter.dashboard.presentation.views.DashBoardFragment"
         android:label="fragment_dash_board"
         tools:layout="@layout/fragment_dash_board" />
     <deepLink app:uri="remoter://dashboard" />
