Fetch an display all jobs available

--- a/features/dashboard/src/main/res/layout/fragment_dash_board.xml
+++ b/features/dashboard/src/main/res/layout/fragment_dash_board.xml
@@ -94,6 +94,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:orientation="horizontal"
+                    android:minHeight="@dimen/_6sdp"
                     tools:listitem="@layout/job_item"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -143,8 +144,8 @@
                     android:id="@+id/allJobsRv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
                     tools:listitem="@layout/job_item"
+                    android:minHeight="@dimen/_6sdp"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
