--- a/features/dashboard/src/main/res/layout/job_item.xml
+++ b/features/dashboard/src/main/res/layout/job_item.xml
@@ -3,12 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    app:cardCornerRadius="@dimen/_16sdp"
     android:layout_margin="@dimen/_3sdp"
-    android:padding="@dimen/_6sdp"
+
     xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
         android:orientation="vertical"
+        android:padding="@dimen/_8sdp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -17,16 +19,21 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/jobTitle"
+            android:ellipsize="marquee"
+            android:textSize="@dimen/_13ssp"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            tools:text="Software Engineer" />
+            tools:text="Software Engineer"
+            android:singleLine="true" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/jobTitle"
             android:id="@+id/company"
+            android:textStyle="bold"
+            android:textSize="@dimen/_12ssp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
