--- a/features/dashboard/src/main/res/layout/fragment_dash_board.xml
+++ b/features/dashboard/src/main/res/layout/fragment_dash_board.xml
@@ -49,7 +49,7 @@
         app:queryBackground="@android:color/transparent"
         app:queryHint="@string/search_hint" />
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:animateLayoutChanges="true"
@@ -64,7 +64,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:orientation="vertical"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:minHeight="@dimen/_150sdp"
@@ -74,6 +74,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/jobs_for_you"
+                    android:textColor="@color/textColor"
                     android:textSize="@dimen/_17ssp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -84,6 +85,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/show_all"
                     android:textSize="@dimen/_13ssp"
+                    android:textColor="@color/textColor"
                     app:layout_constraintTop_toTopOf="@id/jobForMe"
                     android:fontFamily="@font/circular_std_medium_500"
                     app:layout_constraintBottom_toBottomOf="@id/jobForMe"
@@ -92,9 +94,9 @@
                     android:id="@+id/jobsForMeRv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
+
                     android:orientation="horizontal"
-                    android:minHeight="@dimen/_6sdp"
+                    android:minHeight="@dimen/_120sdp"
                     tools:listitem="@layout/job_item"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -119,14 +121,16 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:minHeight="@dimen/_150sdp"
-                android:layout_marginTop="@dimen/_12sdp"
-                android:layout_height="wrap_content">
+                android:layout_marginTop="@dimen/_3sdp"
+                android:layout_height="match_parent">
                 <TextView
                     android:id="@+id/allJobs"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/all_jobs"
+                    android:textColor="@color/textColor"
                     android:textSize="@dimen/_17ssp"
+
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -136,6 +140,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/show_all"
                     android:textSize="@dimen/_13ssp"
+                    android:textColor="@color/textColor"
                     app:layout_constraintTop_toTopOf="@id/allJobs"
                     android:fontFamily="@font/circular_std_medium_500"
                     app:layout_constraintBottom_toBottomOf="@id/allJobs"
@@ -143,9 +148,9 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/allJobsRv"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     tools:listitem="@layout/job_item"
-                    android:minHeight="@dimen/_6sdp"
+                    android:minHeight="@dimen/_250sdp"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -168,7 +173,7 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
