Add navigation utils

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,4 +13,5 @@
         >
     </include-dynamic>
     <include app:graph="@navigation/nav_dashboard" />
+    <include app:graph="@navigation/nav_details" />
 </navigation>
