--- a/features/dashboard/src/main/res/layout/fragment_dash_board.xml
+++ b/features/dashboard/src/main/res/layout/fragment_dash_board.xml
@@ -8,7 +8,7 @@
     android:paddingStart="@dimen/_20sdp"
     android:paddingTop="@dimen/_10sdp"
     android:paddingEnd="@dimen/_20sdp"
-    tools:context=".presentation.views.DashBoardFragment">
+    tools:context=".presentation.views.dashboard.DashBoardFragment">
 
     <TextView
         android:id="@+id/txtGreetings"
