Show detailed job info

--- a/features/dashboard/src/main/res/layout/job_item.xml
+++ b/features/dashboard/src/main/res/layout/job_item.xml
@@ -43,12 +43,14 @@
             android:layout_height="wrap_content">
             <com.google.android.material.chip.Chip
                 android:id="@+id/category"
+                android:clickable="false"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 />
             <com.google.android.material.chip.Chip
                 android:id="@+id/jobType"
                 tools:text="California"
+                android:clickable="false"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         </com.google.android.material.chip.ChipGroup>
